# SubChunker

./: .gitignore  Cargo.toml
src/: benchmark.rs  io.rs  java.rs  main.rs  mods.rs  slint_utils.rs  system_info.rs
ui/: app.slint  basic_screen.slint  callbacks.slint  global_info.slint  menu.slint  mod_install_popup.slint  separator.slint  spiral_loader.slint
