[package]
name = "Subchunker"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.14.1"
hwinfo-rs = "0.1.0"
serde_json = "1.0.148"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
zip = "7.0.0"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
slint-build = "1.14.1"